<resources>
    <string name="app_name">Blink - Bloomware Assistant</string>
    <string name="app_title">Bloomware</string>
    <string name="logo_title_activity_desc">bloomware_logo</string>
    <string name="login_btn_text">Sign In</string>
    <string name="register_btn_text">Sign Up</string>
    <string name="login_text_edit_text">Login</string>
    <string name="password_text_edit_text">Password</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="register_text">Don\'t have an account? Register a new one!</string>
    <string name="bloomware_api_url">https://bloomware-web-api.herokuapp.com/</string>
    <string name="api_url_auth">https://bloomware-web-api.herokuapp.com/api/users/auth</string>
    <string name="api_url_status">https://bloomware-web-api.herokuapp.com/api/status</string>
    <string name="api_url_get_me">https://bloomware-web-api.herokuapp.com/api/users/me</string>
    <string name="api_url_register">https://bloomware-web-api.herokuapp.com/api/users/create</string>
    <string name="api_url_send_mail">https://bloomware-web-api.herokuapp.com/api/users/me/mail_link</string>
    <string name="check_inbox">Registration completed. Check your inbox to verify your account.</string>
    <string name="register_account">Create a new account</string>
    <string name="back_to_login">Back to sign in</string>
    <string name="email">Email</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="cloud">Cloud</string>
    <string name="devices">Devices</string>
    <string name="account_management">Account management</string>
    <string name="game">Bloomware services</string>
    <string name="remote_connect">Remote connect</string>
    <string name="configs">Configs</string>
    <string name="application_management">Application management</string>
    <string name="contact_support">Contact support</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="logout">Sign out</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="welcome_to_blink">Welcome to Blink!</string>
    <string name="latest_changelog">Latest changelog:</string>

    <string name="logout_dialog_msg">When re-authorizing, you will need to enter the data from the account again.</string>
    <string name="sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="personal_data">Personal data</string>
    <string name="secure_status">secure status</string>
    <string name="security">Security</string>
    <string name="subscriptions">Subscriptions</string>

    <string name="account_secured">Account is secured</string>
    <string name="account_not_secured">Account is not secured</string>

    <string name="fa_email">2FA via email is active</string>
    <string name="fa_discord">2FA via Discord is active</string>
    <string name="fa_dis_email">2FA via email and Discord is active</string>
    <string name="fa_no">2FA is not active</string>
    <string name="main_info">Main info</string>
    <string name="username">Username</string>
    <string name="creation_date">Creation date</string>
    <string name="uid">UID</string>
    <string name="connections">Connections</string>
    <string name="discord">Discord</string>
</resources>