<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/account_management">
        <menu>
            <item
                android:title="@string/personal_data"
                android:icon="@drawable/person_icon"
                android:id="@+id/menu_personal"/>

            <item
                android:title="@string/security"
                android:icon="@drawable/security_icon"
                android:id="@+id/menu_security"/>

            <item
                android:title="@string/subscriptions"
                android:icon="@drawable/subs_icon"
                android:id="@+id/menu_subs"/>
        </menu>
    </item>
</menu>