<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.activities.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="183dp"
        android:layout_height="183dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo_title_activity_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bloomware_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginFilledTextField"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_text_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/poppins_light"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="363dp" />

        <!--this is the actual edit text which takes the input-->

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text_edit_text"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginFilledTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_light"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="363dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/poppins_light"
        android:text="@string/login_btn_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/forgot_pwd_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/forgot_password_text"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="11sp"
        android:autoSizeMaxTextSize="22dp"
        android:autoSizeStepGranularity="2sp"/>

    <TextView
        android:id="@+id/create_acc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:autoSizeMinTextSize="11sp"
        android:autoSizeMaxTextSize="22dp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:textStyle="bold" />


</LinearLayout>